
This file shows the changes in recent releases of MODx. The most current release is usually the 
development release, and is only shown to give an idea of what's currently in the pipeline.

MODx Revolution 2.0.0-pl ($LastChangedRevision$, $LastChangedDate$)
====================================
- Updated duplicate processors to check validation, return more informative messages, sanity checks
- Removed duplicate days keys in lexicon
- Fixed issues when TV render directories are overridden
- [#MODX-2115] Fixed issue with phpthumb reference and capitalization, and when base_url is /
- [#MODX-2113] Fixed CTRL+SHIFT+H shortcut for hiding left nav
- Fixed bug in ORM tree relating to adding root nodes when subnode was selected
- Added ability to add/remove attributes and containers to UI ORM trees, specifically in User extended and remote data
- Added UI for editing extended User Profile data
- [#MODX-2116] Fixed bug in depth search in modX::sanitize
- [#MODX-1150] Changing class_key for a Resource now reloads the page to change editing area
- [#MODX-2077] Config check screen in welcome panel now is same width as other panels
- [#MODX-1648] Lexicon Management now loads by default the current manager_language
- [#MODX-1743] Package update now shows status alert when package is already up to date, rather than an error
- [#MODX-2119] Fixed bug in IE where onunload was firing regardless, preventing moving off page seamlessly
- [#MODX-2112] Fixed bug where admin password reset was not working
- [#MODX-2111] Fixed bug where language settings were not set after running setup in another language
- [#MODX-2110] Fixed bug where resource fields were not being updated on update, causing publishedon errors
- Adjusted version for pl development

MODx Revolution 2.0.0-rc-3 (LastChangedRevision: 7083, LastChangedDate: 2010-07-07 12:20:55 -0500 (Wed, 07 Jul 2010))
====================================
- Updated German translation
- Fixed bug with new installs and base template name